9167 gptzfsboot and zfsloader can't find slices inside PTABLE_VTOC label after 9099 Reviewed by: Andy Fiddaman <omnios@citrus-it.co.uk> Reviewed by: Bill Sommerfeld <sommerfeld@alum.mit.edu> Approved by: Dan McDonald <danmcd@joyent.com>