usr/src/boot/sys/boot/i386/gptzfsboot/zfsboot.c
@@ -613,7 +613,9 @@ probe_partition(void *arg, const char *partname,
 		table = ptable_open(&pa, part->end - part->start + 1,
 		    ppa->secsz, parttblread);
 		if (table != NULL) {
-			if (ptable_gettype(table) == PTABLE_VTOC8) {
+			enum ptable_type pt = ptable_gettype(table);
+
+			if (pt == PTABLE_VTOC8 || pt == PTABLE_VTOC) {
 				ret = ptable_iterate(table, &pa,
 				    probe_partition);
 				ptable_close(table);
